@@ -629,7 +629,6 @@
 			</tr>
 		</table>
 		
-		<button class="btn" id="save_store">Save</button>
 	</div>
 
 	<div id="maincontent_community" class="content" style="display: none">
@@ -753,7 +752,6 @@
 			</tr>
 		</table>
 		
-		<button class="btn" id="save_community">Save</button>
 	</div>
 
 	<div id="maincontent_news" class="content" style="display: none">
