@@ -6,6 +6,7 @@ v4.9
 + Added Polish translation by mrmahon
 + Profile links now display on private profiles
 : The formatting of tags has changed from square to rounded
+: Options now save automatically without the need to click the save button
 
 v4.8
 -----
